# mcp-rag-knowlege-base

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  REPORT.md  __main__.py  docker-compose.yaml  pyproject.toml  report.md  skills-lock.json
.github/workflows/: lint.yml  test.yml
.opencode/: opencode.jsonc
.opencode/agents/: data-engineer.md  database-coder.md  graph-architect.md  llm-coder.md  mcp-coder.md  project-manager.md  prompt-engineer.md  settings-coder.md
prompts/: answer_generation.md  fallback_message.md  mcp_tool_descriptions.md  query_broaden.md  query_rewrite.md  relevance_grade.md
rag_dataset/: download.py
rag_dataset/.opencode/: .gitignore  opencode.jsonc
rag_dataset/demo_documents/code/: scp-slots.ts  scp_rpg.py
rag_dataset/demo_documents/goi/: 0-texts-found.md  1-staar-cuttt-2-5.md  1st-cetres-donation.md  (+5 more)
scripts/: start_server.sh
src/core/: logging.py  settings.py
src/document_processing/: __init__.py  base.py  code_splitter.py  factory.py  json_splitter.py  markdown_splitter.py  models.py  text_splitter.py  yaml_splitter.py
src/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
src/llm/: __init__.py  factory.py
src/mcp_server/: schemas.py  server.py  tool_descriptions.py
src/retrieval/: __init__.py  bm25_store.py  embedding_fn.py  indexer.py  retriever.py
tests/: conftest.py  fix_nodes.py  test_graph_rag.py  test_indexer.py  test_logging.py  test_markdown_splitter.py  test_position_metadata.py  test_rag_graph.py  test_retrieval.py  test_retriever.py  test_server.py  test_tools.py
(+114 files in other folders)
