[project]
name = "mcp-rag-knowlege-base"
version = "0.1.0"
description = "MCP server that turns a local folder of documents into a searchable knowledge base using RAG"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp[server]>=3.4",
    "chromadb>=1.5",
    "langgraph>=1.2",
    "langchain>=1.3",
    "rank-bm25>=0.2",
    "pytest>=9.1",
    "pytest-asyncio>=1.0",
    "fastmcp-slim[server]>=3.4.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-markdown>=0.5.1",
    "tree-sitter-markdown-text>=0.2.1",
    "tree-sitter-yaml>=0.7.2",
    "langchain-ollama>=1.1.0",
    "tree-sitter-json>=0.24.8",
    "nltk>=3.9.4",
    "langchain-openai>=1.3.2",
    "html-text>=0.7.1",
]
[tool.pyright]
venvPath = "."
venv = ".venv"
